<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="72dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/ic_immagine_2022_08_02_163109660" />

            <TextView
                android:id="@+id/nomeProfilo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/home_visitatore"
                android:textColor="#df03082b"
                android:textSize="20dp"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@drawable/curvedbg"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/Visiteimg"
                    android:layout_width="380dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/curvebuttonbg" />

                <ImageButton
                    android:id="@+id/VisiteCuratori"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="25dp"
                    android:background="@drawable/ic_bottonevisite"
                    android:contentDescription="@string/visitecuratore" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="110dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/visite_dei_curatori"
                    android:textColor="#d703082b"
                    android:textSize="23dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="110dp"
                    android:layout_marginTop="65dp"
                    android:text="@string/visite_consigliate_dai_curatori"
                    android:textColor="#6003082b"
                    android:textSize="14dp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">


                <ImageButton
                    android:id="@+id/VisiteVisitatori"
                    android:layout_width="380dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/curvebuttonbg"
                    android:contentDescription="@string/visitevisitatore" />

                <ImageView
                    android:id="@+id/MyVisiteimg"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="25dp"
                    android:background="@drawable/ic_visualizza" />


                <TextView
                    android:id="@+id/visitep"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="105dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/visite_personalizzate"
                    android:textColor="#d703082b"
                    android:textSize="23dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/miev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="105dp"
                    android:layout_marginTop="55dp"
                    android:text="@string/le_mie_visite"
                    android:textColor="#6003082b"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/QrImg"
                    android:layout_width="380dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/curvebuttonbg"
                    android:contentDescription="@string/todo" />

                <ImageButton
                    android:id="@+id/Qrcode"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="25dp"
                    android:background="@drawable/ic_baseline_qr_code_scanner_24"
                    android:contentDescription="@string/qrcode" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="105dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/qrcode_scanner"
                    android:textColor="#d703082b"
                    android:textSize="23sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="105dp"
                    android:layout_marginTop="55dp"
                    android:text="@string/cerca_tramite_qrcode"
                    android:textColor="#6003082b"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </RelativeLayout>


        </LinearLayout>

    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/design_default_color_primary"
            app:itemIconTint="@color/white"
            app:itemTextColor="@color/white"
            app:menu="@menu/bottombar" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:contentDescription="home"
            android:src="@drawable/ic_home_24"
            android:onClick="goHome"
            app:backgroundTint="#ED6532"
            app:elevation="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>